whitespace fix re-implemented

--- a/app/assets/stylesheets/head.scss
+++ b/app/assets/stylesheets/head.scss
@@ -1,8 +1,8 @@
 
 .white-space{
-  // display: flex;
-  // flex-direction: row;
-  // height: 100px;
+  display: flex;
+  flex-direction: row;
+  height: 100px;
 }
 
 .nav{
